# pythonfluente2e

./: .gitignore  Gemfile  Livro.adoc  Posfacio.adoc  Prefacio.adoc  README.adoc  atributos-pt_BR.adoc  build.sh  como-gerar-o-livro.md  deploy.sh  gerar-epub.md  guia-de-estilo.adoc  livro.adoc  render.sh  replacer.ipynb  requirements.txt  ruff.toml
calango/: README.md  pyproject.toml
calango/src/calango/: __init__.py  xrefs.py
calango/tests/: test_xrefs.py
calango/tools/: farxrefs.py
capitulos/: cap01.adoc  cap02.adoc  cap03.adoc  cap04.adoc  cap05.adoc  cap06.adoc  cap07.adoc  cap08.adoc  cap09.adoc  cap10.adoc  cap11.adoc  cap12.adoc  cap13.adoc  cap14.adoc  cap15.adoc  cap16.adoc  cap17.adoc  cap18.adoc  cap19.adoc  cap20.adoc  cap21.adoc  cap22.adoc  cap23.adoc  cap24.adoc
code/: README.md
ferramentas/: README.md  addLazyLoadingImages.rb  anchors.ini  chapter.ini  fix_dunder.py  go_check.go  list_symbols.py  references_finder.py  sembreak.py  stats-estilo.ipynb  test_sembreak.py  toc-pt-br.txt  unicode-chars-used.ipynb  xrefs_xparts.ini
glifos/: README.md  cp1252_additions.py  cp437_versus_cp1252.ipynb  find-tofus.ipynb  list_symbols.py  math-symbols.adoc  tofu-cap04.adoc  vol1-cap01-08-SEM-cap04.adoc  vol1-cap01-08.adoc  vol1-cap04.adoc  vol1-sem-cap4.adoc
images/: abc-uml.graffle  despacho-duplo.graffle  diag-filter.xcf  diag-groupby.xcf  diag-map.xcf  diag-reduce.xcf  diagrama9-1.odg  flpy_1002.odg  flpy_2101.xcf  mapa-da-tipagem-linguagens.odg  mapa-da-tipagem.odg  numbers-uml.graffle
links/: FPY.LI.htaccess  FPY.LI.htaccess.BACKUP  README.md  (+18 more)
(+257 files in other folders)
