[project]
name = "calango"
version = "0.1.0"
description = "Processador de refeências cruzadas"
readme = "README.md"
authors = [
    { name = "Luciano Ramalho", email = "luciano@ramalho.org" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
calango = "calango:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
