[project]
name = "calango"
version = "0.1.0"
description = "Processador de refeências cruzadas"
readme = "README.md"
authors = [
    { name = "Luciano Ramalho", email = "luciano@ramalho.org" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.13.5",
]

[project.scripts]
calango = "calango:main"
farxrefs = "calango:xrefs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
